--- a/Assessment.ipynb
+++ b/Assessment.ipynb
@@ -302,7 +302,7 @@
    ],
    "source": [
     "# store the result of the dataset\n",
-    "dataset_location = \"C://Users/Asus/Downloads/Proj/store50.xlsx\"\n",
+    "dataset_location = \"store50.xlsx\"\n",
     "Store50=load_the_dataset(dataset_location)\n",
     "Store50.head()\n",
     "# len(Store50)"
@@ -1070,9 +1070,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (Temp/ipykernel_2696/1367619685.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Asus\\AppData\\Local\\Temp/ipykernel_2696/1367619685.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    https://github.com/Yatheshta-V/unextdeloitteuser20\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "https://github.com/Yatheshta-V/unextdeloitteuser20"
    ]
@@ -1089,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1202,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-28T12:43:15.796584Z",
@@ -1273,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1333,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1350,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1360,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1414,7 @@
        "<Figure size 864x576 with 1 Axes>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1434,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1462,7 @@
        "<Figure size 864x576 with 1 Axes>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1477,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1496,7 @@
        "<Figure size 864x576 with 1 Axes>"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1529,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1542,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1553,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1585,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1624,7 +1633,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1648,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1757,7 @@
        "4  ((0, 0, 0), (1, 0, 0, 7))  1564.893756"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1783,7 +1792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1867,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1883,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1939,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,16 +1964,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x20cb6855ca0>]"
+       "[<matplotlib.lines.Line2D at 0x2a874782190>]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1999,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 57,
    "metadata": {
     "id": "sr4EbY-47azs"
    },
@@ -2025,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 58,
    "metadata": {
     "scrolled": true
    },
@@ -2054,7 +2063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2095,17 +2104,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting lime\n",
+      "  Downloading lime-0.2.0.1.tar.gz (275 kB)\n",
+      "Requirement already satisfied: matplotlib in c:\\users\\asus\\anaconda3\\lib\\site-packages (from lime) (3.4.3)\n",
+      "Requirement already satisfied: numpy in c:\\users\\asus\\anaconda3\\lib\\site-packages (from lime) (1.20.3)\n",
+      "Requirement already satisfied: scipy in c:\\users\\asus\\anaconda3\\lib\\site-packages (from lime) (1.7.1)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\asus\\anaconda3\\lib\\site-packages (from lime) (4.62.3)\n",
+      "Requirement already satisfied: scikit-learn>=0.18 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from lime) (0.24.2)\n",
+      "Requirement already satisfied: scikit-image>=0.12 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from lime) (0.18.3)\n",
+      "Requirement already satisfied: networkx>=2.0 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from scikit-image>=0.12->lime) (2.6.3)\n",
+      "Requirement already satisfied: pillow!=7.1.0,!=7.1.1,>=4.3.0 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from scikit-image>=0.12->lime) (8.4.0)\n",
+      "Requirement already satisfied: imageio>=2.3.0 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from scikit-image>=0.12->lime) (2.9.0)\n",
+      "Requirement already satisfied: tifffile>=2019.7.26 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from scikit-image>=0.12->lime) (2021.7.2)\n",
+      "Requirement already satisfied: PyWavelets>=1.1.1 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from scikit-image>=0.12->lime) (1.1.1)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from matplotlib->lime) (0.10.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from matplotlib->lime) (1.3.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from matplotlib->lime) (2.8.2)\n",
+      "Requirement already satisfied: pyparsing>=2.2.1 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from matplotlib->lime) (3.0.4)\n",
+      "Requirement already satisfied: six in c:\\users\\asus\\anaconda3\\lib\\site-packages (from cycler>=0.10->matplotlib->lime) (1.16.0)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from scikit-learn>=0.18->lime) (2.2.0)\n",
+      "Requirement already satisfied: joblib>=0.11 in c:\\users\\asus\\anaconda3\\lib\\site-packages (from scikit-learn>=0.18->lime) (1.1.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\asus\\anaconda3\\lib\\site-packages (from tqdm->lime) (0.4.4)\n",
+      "Building wheels for collected packages: lime\n",
+      "  Building wheel for lime (setup.py): started\n",
+      "  Building wheel for lime (setup.py): finished with status 'done'\n",
+      "  Created wheel for lime: filename=lime-0.2.0.1-py3-none-any.whl size=283857 sha256=0068e0830f1ad438ecc4c68bd558cfa6f40724d25347f127493c7a60100bda2d\n",
+      "  Stored in directory: c:\\users\\asus\\appdata\\local\\pip\\cache\\wheels\\ed\\d7\\c9\\5a0130d06d6310bc6cbe55220e6e72dcb8c4eff9a478717066\n",
+      "Successfully built lime\n",
+      "Installing collected packages: lime\n",
+      "Successfully installed lime-0.2.0.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install lime"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import lime\n",
+    "import lime.lime_tabular"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explainer = lime.lime_tabular.LimeTabularExplainer(train_1041.values, feature_names=train_1041.columns.values.tolist(),\n",
+    "                                                  class_names=['MEDV'], verbose=True, mode='regression')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_2696/1801537818.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mj\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexplainer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexplain_instance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest_1041\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Store_1041'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmod\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\lime\\lime_tabular.py\u001b[0m in \u001b[0;36mexplain_instance\u001b[1;34m(self, data_row, predict_fn, labels, top_labels, num_features, num_samples, distance_metric, model_regressor)\u001b[0m\n\u001b[0;32m    338\u001b[0m             \u001b[1;31m# Preventative code: if sparse, convert to csr format if not in csr format already\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    339\u001b[0m             \u001b[0mdata_row\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_row\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtocsr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 340\u001b[1;33m         \u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minverse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__data_inverse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata_row\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_samples\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    341\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msparse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0missparse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    342\u001b[0m             \u001b[1;31m# Note in sparse case we don't subtract mean since data would become dense\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\lime\\lime_tabular.py\u001b[0m in \u001b[0;36m__data_inverse\u001b[1;34m(self, data_row, num_samples)\u001b[0m\n\u001b[0;32m    538\u001b[0m         \u001b[0minverse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    539\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mcolumn\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcategorical_features\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 540\u001b[1;33m             \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_values\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    541\u001b[0m             \u001b[0mfreqs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature_frequencies\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcolumn\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    542\u001b[0m             inverse_column = self.random_state.choice(values, size=num_samples,\n",
+      "\u001b[1;31mKeyError\u001b[0m: 1"
+     ]
+    }
+   ],
+   "source": [
+    "j = 1\n",
+    "exp = explainer.explain_instance(test_1041['Store_1041'].values, mod.predict)"
+   ]
   },
   {
    "cell_type": "markdown",
